<resources>
    <string name="app_name">Ice-Tetik</string>
    <string name="cd_logo_splash">Logo Ice-Tetik</string>
    <string name="plc_today_mood">Kamu %s Hari Ini</string>
    <string name="title_your_mood_today">Mood Kamu Hari Ini:</string>
    <string name="title_relaxation_with_min_tik">yuk\nrelaksasi\nbareng\nmin-tik</string>
    <string name="title_information_for_you">Informasi\nuntuk\nkamu</string>
    <string name="title_recommendation_video">Video Pilihan</string>
    <string name="cd_image_today_mood">Image mood hari ini</string>
    <string name="txt_strip_null">-</string>
    <string name="cd_image_mascot">Maskot Ice-Tetik</string>
    <string name="cd_image_mascot_video">Image Maskot Video</string>
    <string name="cd_icon_video_play">Icon mulai video</string>
    <string name="cd_icon_calendar">Icon Kalender</string>
    <string name="cd_icon_recap_statistics">Icon Rekap</string>
    <string name="cd_icon_questionnaire">Icon Kuesioner</string>
    <string name="cd_icon_settings">Icon Pengaturan</string>
    <string name="title_app_name">ICE-TETIK</string>
    <string name="title_healing_app">HEALING APP</string>
    <string name="title_your_healing_partner">Your healing partner.</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="cd_image_heart">Image Heart Ice-Tetik</string>
    <string name="cd_icon_close">Icon tutup halaman</string>
    <string name="icon_previous_month">Icon bulan sebelumnya</string>
    <string name="icon_next_month">Icon bulan selanjutnya</string>
    <string name="title_sunday">Min</string>
    <string name="title_monday">Sen</string>
    <string name="title_tuesday">Sel</string>
    <string name="title_wednesday">Rab</string>
    <string name="title_thursday">Kam</string>
    <string name="title_friday">Jum</string>
    <string name="title_saturday">Sab</string>
    <string name="txt_add_mood">Tambah Mood</string>
    <string name="txt_add_note">Tambah Catatan</string>
    <string name="cd_image_mood_relevant_date">Image mood pada tanggal tersebut</string>
    <string name="cd_image_note_with_relevant_date">Image note pada tanggal tersebut</string>
    <string name="txt_read_more">baca lebih lanjut</string>
    <string name="cd_icon_read_more">Icon read more</string>
    <string name="title_choose_mood">Pilih Mood Kamu</string>
    <string name="hint_note_edit_text">Tulis Note Kamu..</string>
    <string name="title_add_note">Tambah Note</string>
    <string name="txt_save">Save</string>
    <string name="title_sign_in_user">Sign In User</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_or">or</string>
    <string name="txt_sign_in_with_google">Sign in with Google</string>
    <string name="title_sign_up_user">Sign Up User</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_retype_password">Re-type Password</string>
    <string name="title_recap_mood_this_month">Rekap Mood Kamu Bulan Ini</string>
    <string name="title_happy">Senang</string>
    <string name="title_sad">Sedih</string>
    <string name="title_angry">Marah</string>
    <string name="title_shock">Terkejut</string>
    <string name="title_scared">Takut</string>
    <string name="title_disgusting">Jijik</string>
    <string name="cd_icon_happy">Icon Senang</string>
    <string name="cd_icon_sad">Icon Sedih</string>
    <string name="cd_icon_angry">Icon Marah</string>
    <string name="cd_icon_shock">Icon Terkejut</string>
    <string name="cd_icon_scared">Icon Takut</string>
    <string name="cd_icon_disgusting">Icon Jijik</string>
    <string name="cd_icon_mood_related">Icon mood terkait</string>
    <string name="cd_icon_setting_item">Icon item setting</string>
    <string name="txt_yes">Ya</string>
    <string name="txt_no">Tidak</string>
    <string name="txt_email_invalid">Email tidak valid</string>
    <string name="txt_minimum_two_character_fullname">Nama lengkap minimal 2 karakter</string>
    <string name="txt_password_minimum_eight_character">Kata sandi minimum 8 karakter</string>
    <string name="error_cannot_save_account_data">Terjadi kesalahan karena sistem tidak dapat menyimpan data kamu</string>
    <string name="msg_login_success">Sign In berhasil</string>
    <string name="error_all_field_must_be_valid">Semua kolom isian harus terisi dan valid, silakan coba lagi</string>
    <string name="error_cannot_retrieve_user_data">Terjadi kesalahan karena sistem tidak dapat menerima data akun kamu</string>
    <string name="error_cannot_sign_in">Terjadi kesalahan saat sign in, silakan coba lagi</string>
    <string name="msg_sign_up_success">Sign Up berhasil</string>
    <string name="error_password_not_same">Password tidak sama</string>
    <string name="error_note_cannot_be_empty">Note tidak boleh kosong</string>
    <string name="txt_edit_note">Edit Catatan</string>
    <string name="txt_edit_mood">Edit Mood</string>
    <string name="error_process_request">Terjadi kesalahan saat memproses permintaan kamu</string>
    <string name="error_mood_or_note_not_added_yet">Mood atau Jurnal belum ditambahkan</string>
    <string name="error_session_expired">Sesi akun kamu sudah berakhir, silakan login kembali</string>
    <string name="error_when_load_mood_status">Terjadi kesalahan saat memuat status mood kamu </string>
    <string name="error_today_mood_not_set_yet">Hari ini kamu belum set mood kamu</string>
    <string-array name="themes">
        <item>Default Sistem</item>
        <item>Mode Terang</item>
        <item>Mode Gelap</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_ok">OK</string>
    <string name="msg_success_reset_password">Reset password berhasil, silakan cek email kamu untuk mengatur password</string>
    <string name="msg_reset_password_confirmation">Apakah kamu yakin untuk reset password?</string>
    <string name="error_user_info_not_found">Informasi user tidak dapat ditemukan</string>
    <string name="txt_select_theme">Pilih tema favorit kamu</string>
    <string name="msg_sign_out_dialog">Apakah kamu yakin ingin sign out?</string>
    <string name="error_no_data_this_month">Belum ada data di bulan ini</string>
    <string name="txt_mood">Mood</string>
    <string name="error_video_null">Terjadi kesalahan saat memuat video, silakan coba lagi</string>
    <string name="error_infographic_null">Terjadi kesalahan saat memuat infographic, silakan coba lagi</string>
    <string name="error_faq_null">Terjadi kesalahan saat memuat data faq, silakan coba lagi</string>
    <string name="error_questionnaire_null">Terjadi kesalahan saat memproses data kuesioner, silakan coba lagi</string>
    <string name="title_detail_infographic">Detail Infografis</string>
    <string name="title_frequently_asked_question">Frequently\nAsked\nQuestion</string>
    <string name="cd_image_mascot_faq">Image maskot Faq</string>
    <string name="txt_what_is_ice_tetik">Apa itu Ice-Tetik</string>
    <string name="txt_what_are_feature_ice_tetik">Apa saja fitur aplikasi ini?</string>
    <string name="txt_how_to_collab_with_ice_tetik">Cara bekerja sama dengan Ice-Tetik</string>
    <string name="txt_how_can_i_buy_product_ice_tetik">Apakah saya bisa membeli product ice tetik melalui aplikasi ini?</string>
    <string name="txt_how_to_support_ice_tetik">Bagaimana cara saya mendukung Ice-Tetik?</string>
    <string name="txt_is_available_in_ios">Apakah aplikasi ini tersedia untuk IOS</string>
    <string name="cd_icon_theme">Icon tema</string>
    <string name="txt_apply">Terapkan</string>
    <string name="cd_image_thumbnail">Image thumbnail</string>
    <string name="title_touch_to_start">Ketuk untuk mulai</string>
    <string name="cd_image_button_play">Image tombol mulai</string>
    <string name="cd_icon_home">Icon home</string>
    <string name="title_source_emotion">Menurutmu, emosi tersebut datangnya dari mana?</string>
    <string name="cd_icon_next">Icon halaman selanjutnya</string>
    <string name="title_dont_worry_start_relaxation">Jangan khawatir, Min-Tik disini\n\nSekarang duduk dengan nyaman, yuk latihan pernapasan bareng min-tik</string>
    <string name="txt_start_exercise">Mulai Latihan</string>
    <string name="cd_image_hello_mintik">Image Hello Mintik</string>
    <string name="title_hello_iam_mintik">Halo!, Aku Min-Tik yang akan siap sedia membantu saat kamu butuh rileks</string>
    <string name="txt_start_relaxation">Mulai\nRelaksasi</string>
    <string name="title_what_emotion_you_feel">Apa saja emosi yang kamu rasakan sekarang?</string>
    <string name="txt_positive_emotion">Emosi Positif</string>
    <string name="txt_negative_emotion">Emosi Negatif</string>
    <string name="title_thank_you_relaxation">Terima Kasih\ntelah percaya min-tik untuk berbagi, kamu sudah melakukan yang terbaik.</string>
    <string name="txt_back_to_main_page">Kembali Ke Halaman Utama</string>
    <string name="title_video_recommendation">Berikut pilihan video untukmu</string>
    <string name="cd_image_avatar_profile">Avatar profile</string>
    <string name="txt_sync_data">Sinkronkan Data</string>
    <string name="txt_exit">Keluar</string>
    <string name="txt_result">HASIL</string>
    <string name="txt_intro_result_questionnaire">Dari pengisian kuesioner DASS-42 untuk menilai tingkat stress, kecemasan dan depresi.</string>
    <string name="txt_stress_level">Tingkat Stress Anda</string>
    <string name="txt_worry_level">Tingkat Kecemasan Anda</string>
    <string name="txt_depression_level">Tingkat Depresi Anda</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="title_dass_42">DASS-42</string>
    <string name="cd_icon_prev">Icon halaman sebelumnya</string>
    <string name="txt_differences_all_level">Apa perbedaan stress, kecemasan dan depresi dan apa dampaknya bagi tubuh saya?</string>
    <string name="txt_what_can_i_do_for_you">Apa yang bisa saya lakukan untuk mengelola stress, kecemasan dan depresi</string>
    <string name="txt_do_you_need_expert">Apakah saya membutuhkan ahli?</string>
    <string name="txt_find_more">Cari tahu lebih dalam mengenai stress, kecemasan, depresi, ataupun gangguan mental emosional lainnya, melalui fitur berikut:</string>
    <string name="txt_recommendation">Video Pilihan</string>
    <string name="txt_infographic">Infografis</string>
    <string name="title_infographic_for_you">Infografis Pilihan Untukmu</string>
    <string name="title_help">Bantuan</string>
    <string name="txt_need_help">Perlu bantuan?\nhubungi kami di instagram</string>
    <string name="txt_ig_link">Link IG</string>
    <string name="txt_contact_number">atau hubungi nomor berikut</string>
    <string name="txt_contact_person">Contact Person</string>
    <string name="title_feedback">Umpan Balik</string>
    <string name="txt_give_feedback_by_fill_form">Berikan umpan balik untuk aplikasi dan produk kami dengan mengisi link berikut:</string>
    <string name="txt_gform_link">Link gform</string>
    <string name="txt_give_support_to_us">Beri support dengan melakukan rating penilaian sempurna pada playstore dan follow akun sosial media kami</string>
    <string name="txt_linktree">Linktree</string>
    <string name="txt_support_by_pray">Support kami dengan jalur langit, berikan doa terbaik untuk kemajuan Ice-Tetik company, share aplikasi ini agar bisa menjangkau banyak orang</string>
    <string name="txt_tagline">ice tetik\nicy delight, healthy inside!</string>
    <string name="txt_thank_for_the_support">Kami mengucapkan terima kasih yang sebesar besarnya untuk semua yang sudah mendukukng kami</string>
    <string name="msg_delete_account_cannot_undone">Akun dan data tidak dapat dikembalikan apabila sudah terhapus!</string>
</resources>