<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    android:padding="24dp"
    tools:context=".page.settings.FeedbackActivity">

    <TextView
        android:id="@+id/tv_title_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_feedback"
        android:textAlignment="center"
        android:textSize="28sp"
        android:fontFamily="@font/league_spartan_bold"
        android:textColor="@color/cream_100"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_give_feedback"
        style="@style/BodyFaqTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_give_feedback_by_fill_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_feedback"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/ItemButtonFaq"
        android:id="@+id/btn_gform"
        android:layout_width="match_parent"
        android:text="@string/txt_gform_link"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_give_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_give_support"
        style="@style/BodyFaqTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_give_support_to_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gform"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/ItemButtonFaq"
        android:id="@+id/btn_linktree"
        android:layout_width="match_parent"
        android:text="@string/txt_linktree"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_give_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_support_with_pray"
        style="@style/BodyFaqTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_support_by_pray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_linktree"
        />

    <TextView
        android:id="@+id/tv_thank_you"
        style="@style/BodyFaqTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_thank_for_the_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_support_with_pray"
        />

    <TextView
        android:id="@+id/tv_ice_tetik"
        style="@style/BodyFaqTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/cream_100"
        android:text="@string/txt_tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_thank_you"
        />






</androidx.constraintlayout.widget.ConstraintLayout>