<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryBackgroundColor"
    tools:context=".relaxation.OnboardRelaxationFragment">


    <ImageView
        android:id="@+id/iv_bubble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_bubble_mascot"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_image_hello_mintik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_title_message_mascot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_hello_iam_mintik"
        android:textColor="@color/primaryBackgroundColor"
        android:fontFamily="@font/league_spartan_bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="42dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="@id/iv_bubble"
        app:layout_constraintEnd_toEndOf="@id/iv_bubble"
        app:layout_constraintTop_toTopOf="@id/iv_bubble"
        />



    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_mascot"
        android:contentDescription="@string/cd_image_mascot"
        app:layout_constraintWidth_percent="0.60"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_start_next_relaxation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bubble" />

    <TextView
        android:id="@+id/tv_title_start_next_relaxation"
        style="@style/HeaderEmotionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_start_relaxation"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_next_24"
        android:contentDescription="@string/cd_icon_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/cream_100" />











</androidx.constraintlayout.widget.ConstraintLayout>