<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.mainmood.MoodActivity"
    android:background="@color/cream_75"
    >

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/tv_title_todaymood"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/title_your_mood_today"
               android:textSize="24sp"
               android:fontFamily="@font/league_spartan_bold"
               android:layout_marginTop="16dp"
               android:textColor="@color/black"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               />

           <ImageView
               android:id="@+id/iv_mood"
               android:layout_width="250dp"
               android:layout_height="250dp"
               android:scaleType="centerCrop"
               android:background="@drawable/fr_image_mood_activity"
               android:layout_marginTop="16dp"
               android:contentDescription="@string/cd_image_today_mood"
               app:layout_constraintTop_toBottomOf="@id/tv_title_todaymood"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               />

           <TextView
               android:id="@+id/tv_mood"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/txt_today_mood_null"
               style="@style/MainHeaderTextStyle"
               android:fontFamily="@font/league_spartan_bold"
               android:textAllCaps="true"
               android:textSize="36sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/iv_mood"
               />


           <LinearLayout
               android:id="@+id/ly_card_info"
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:layout_margin="16dp"
               android:layout_marginTop="16dp"
               android:background="@drawable/fr_container_mood_activity"
               android:padding="16dp"
               android:orientation="horizontal"
               android:baselineAligned="true"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tv_mood">

               <LinearLayout
                   android:id="@+id/ly_relaxation"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:orientation="horizontal"
                   android:background="@drawable/fr_item_container_mood_activity">

                   <ImageView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:src="@drawable/img_mascot"
                       android:layout_weight="1"
                       android:contentDescription="@string/cd_image_mascot"
                       android:layout_marginVertical="8dp"
                       android:layout_marginEnd="4dp"
                       android:layout_marginStart="8dp"
                       />

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:text="@string/title_relaxation_with_min_tik"
                       android:textColor="@color/white"
                       android:layout_weight="1"
                       android:fontFamily="@font/league_spartan_bold"
                       android:textSize="18sp"
                       android:layout_marginVertical="8dp"
                       android:layout_marginEnd="8dp" />

               </LinearLayout>

               <LinearLayout
                   android:id="@+id/ly_information"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:layout_marginStart="16dp"
                   android:orientation="vertical"
                   >

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:orientation="horizontal"
                       android:background="@drawable/fr_item_container_mood_activity"
                       android:layout_weight="1"
                       android:layout_marginBottom="8dp"
                       >

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/title_information_for_you"
                           android:textColor="@color/white"
                           android:textSize="16sp"
                           android:layout_weight="1"
                           android:fontFamily="@font/league_spartan_bold"
                           android:layout_marginVertical="8dp"
                           android:layout_marginStart="12dp"
                           />

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/img_woman_mascot"
                           android:layout_weight="1"
                           android:scaleType="fitEnd"
                           android:contentDescription="@string/cd_image_mascot_video"
                           android:layout_marginStart="8dp"
                           android:layout_marginTop="8dp"
                           android:layout_marginEnd="8dp"
                           />

                   </LinearLayout>

                   <LinearLayout
                       android:id="@+id/ll_video"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:orientation="horizontal"
                       android:background="@drawable/fr_item_container_mood_activity"
                       android:layout_weight="1"
                       >


                       <ImageView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:src="@drawable/img_circle_play"
                           android:contentDescription="@string/cd_icon_video_play"
                           android:layout_weight="1"
                           android:layout_marginVertical="8dp"
                           android:layout_marginStart="12dp"
                           android:padding="8dp"

                           />

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:text="@string/title_recommendation_video"
                           android:textColor="@color/white"
                           android:gravity="center_vertical"
                           android:textSize="20sp"
                           android:fontFamily="@font/league_spartan_bold"
                           android:layout_weight="1"
                           android:layout_marginStart="8dp"
                           android:layout_marginVertical="8dp"
                           android:layout_marginEnd="8dp"
                           />

                   </LinearLayout>



               </LinearLayout>

           </LinearLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/ly_action"
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:padding="16dp"
               android:background="@drawable/fr_container_mood_activity"
               android:layout_margin="16dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/ly_card_info"
               app:layout_constraintBottom_toBottomOf="parent"

               >


               <ImageView
                   android:id="@+id/iv_calendar"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:src="@drawable/img_calendar_mood"
                   android:contentDescription="@string/cd_icon_calendar"
                   app:layout_constraintWidth_percent="0.25"
                   app:layout_constraintEnd_toStartOf="@+id/iv_statistics"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <ImageView
                   android:id="@+id/iv_statistics"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:src="@drawable/img_statistic_mood"
                   android:contentDescription="@string/cd_icon_recap_statistics"
                   app:layout_constraintWidth_percent="0.25"
                   app:layout_constraintEnd_toStartOf="@+id/iv_quiz"
                   app:layout_constraintStart_toEndOf="@+id/iv_calendar"
                   app:layout_constraintTop_toTopOf="parent" />

               <ImageView
                   android:id="@+id/iv_quiz"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:src="@drawable/img_notes_mood"
                   android:contentDescription="@string/cd_icon_questionnaire"
                   app:layout_constraintWidth_percent="0.25"
                   app:layout_constraintEnd_toStartOf="@+id/iv_settings"
                   app:layout_constraintStart_toEndOf="@+id/iv_statistics"
                   app:layout_constraintTop_toTopOf="parent" />

               <ImageView
                   android:id="@+id/iv_settings"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:src="@drawable/img_setting_mood"
                   android:contentDescription="@string/cd_icon_settings"
                   app:layout_constraintWidth_percent="0.25"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toEndOf="@+id/iv_quiz"
                   app:layout_constraintTop_toTopOf="parent" />

           </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.constraintlayout.widget.ConstraintLayout>

   </ScrollView>

    <include
        android:id="@+id/sbl_loading"
        layout="@layout/sublayout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />



</androidx.constraintlayout.widget.ConstraintLayout>